UIEXT-1491: Refactor to comply with refined choices API
UIEXT-1491 (Refine ChoicesWidget API)